story - added story fragment for displaying story description and navigation button to article source

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="undo">Undo</string>
 
     <string name="channel_removed">\'%s\' RSS Feed removed</string>
+    <string name="read_more">Read more</string>
 
 </resources>
